Prevent field wrap scrolling in FF for checkboxes with hideLabel:true
git-svn-id: http://code.extjs.com/svn/ext/trunk@2289 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/form.css
+++ b/resources/css/form.css
@@ -166,6 +166,7 @@ textarea {
     margin:0;
 }
 .x-form-check-wrap {
+    height: 22px;
     line-height:18px;
 }
 .ext-ie .x-form-check-wrap input {
